--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ six                 == 1.16.0
 sqlparse             ==0.4.4
 typing_extensions    ==4.10.0
 dj-database-url      ==         2.3.0
+psycopg                 ==      3.2.3
+psycopg2                 ==     2.9.10
